--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "spatie/flysystem-dropbox": "^2.0",
+        "spatie/laravel-backup": "^8.1",
         "spatie/laravel-permission": "^5.9"
     },
     "require-dev": {
