--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "tailwind-scrollbar": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
