--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,9 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "laravel-echo": "^1.15.0",
     "postcss": "^8.4.21",
+    "pusher-js": "^8.0.1",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
   }
