--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "react-top-loading-bar": "^2.3.1",
     "tailwind-scrollbar": "^3.0.0"
   },
   "devDependencies": {
